Есть пустая страница todoist

--- a/templates/todoist/start_page/start_page.html
+++ b/templates/todoist/start_page/start_page.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <br>
-      <form action="#">
+      <form action="{% url 'todoist' %}">
         <button type="submit" class="btn btn-light fw-bolder fs-4 m-3">Начать</button>
       </form>
     </div>
