--- a/templates/todoist/todoist_page/todoist.html
+++ b/templates/todoist/todoist_page/todoist.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-    {% include 'todoist/sidebar.html' %}
+    {% include 'todoist/todoist_page/sidebar.html' %}
 
 {% endblock %}
